tests/baselines/reference/contextualTypingOfArrayLiterals1.errors.txt
tests/cases/compiler/contextualTypingOfArrayLiterals1.ts(5,5): error TS2322: Type '(number | Date)[]' is not assignable to type 'I'.
  Index signatures '[number]: number | Date' and '[number]: Date' are incompatible.
    Type 'number | Date' is not assignable to type 'Date'.
      Type 'number' is not assignable to type 'Date'.
        Property 'toDateString' is missing in type 'Number'.


==== tests/cases/compiler/contextualTypingOfArrayLiterals1.ts (1 errors) ====
    interface I {
       [x: number]: Date;
    }
    
    var x3: I = [new Date(), 1]; 
        ~~
!!! error TS2322: Type '(number | Date)[]' is not assignable to type 'I'.
!!! error TS2322:   Index signatures '[number]: number | Date' and '[number]: Date' are incompatible.
!!! error TS2322:     Type 'number | Date' is not assignable to type 'Date'.
!!! error TS2322:       Type 'number' is not assignable to type 'Date'.
!!! error TS2322:         Property 'toDateString' is missing in type 'Number'.
    var r2 = x3[1]; 
    r2.getDate(); 
    